first commit color change

--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="columns is-multiline">
                     <div class="column is-6 is-offset-3 mb-6">
-                        <section class="hero is-primary">
+                        <section class="hero is-danger">
                             <div class="hero-body">
                                 <p class="title">
                                     달력이 알바야
@@ -37,7 +37,7 @@
 
                         <div class="field">
                             <div class="control">
-                                <a class="button is-info" id="chat-message-submit">확인</a>
+                                <a class="button is-danger" id="chat-message-submit">확인</a>
                             </div>
                         </div>
 
