--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="columns is-multiline">
                     <div class="column is-6 is-offset-3 mb-6">
-                        <section class="hero is-primary">
+                        <section class="hero is-danger">
                             <div class="hero-body">
                                 <p class="title">
                                     달력이 알바야
@@ -43,7 +43,7 @@
 
                         <div class="field">
                             <div class="control">
-                                <a class="button is-info" id="room-name-submit">확인</a>
+                                <a class="button is-danger" id="room-name-submit">확인</a>
                             </div>
                         </div>
                     </div>
